--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -22,12 +22,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+          cache: 'pip'
       - name: Setup cache
         id: cache-spacemandmm
         uses: actions/cache@v3
         with:
           path: ~/dreamchecker
           key: ${{ runner.os }}-spacemandmm-cache-${{ hashFiles('dependencies.sh') }}
+        id: cache-yarn
+        uses: actions/cache@v3
+        with:
+          path: tgui/.yarn
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('tgui/yarn.lock') }}
       - name: Install SpacemanDMM
         if: steps.cache-spacemandmm.outputs.cache-hit != 'true'
         run: bash tools/ci/install_spaceman_dmm.sh dreamchecker
@@ -37,6 +43,10 @@ jobs:
           bash tools/ci/install_node.sh
           bash tools/ci/install_auxmos.sh
           pip install -r tools/requirements.txt
+      - name: TGUI fetch
+        if: steps.cache-yarn.outputs.cache-hit != 'true'
+        run: |
+          tools/build/build --ci yarn
       - name: Run Linters
         run: |
           bash tools/ci/check_filedirs.sh beestation.dme
@@ -101,6 +111,14 @@ jobs:
       - name: Install auxmos
         run: |
           bash tools/ci/install_auxmos.sh
+      - id: cache-yarn
+        with:
+          path: tgui/.yarn
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('tgui/yarn.lock') }}
+      - name: TGUI fetch
+        if: steps.cache-yarn.outputs.cache-hit != 'true'
+        run: |
+          tools/build/build --ci yarn
       - name: Compile and run tests
         run: |
           source $HOME/BYOND/byond/bin/byondsetup
